[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/named/item_stone.png" type="Texture" id=1]
[ext_resource path="res://src/ui/crafting/RecipiesList.gd" type="Script" id=2]
[ext_resource path="res://src/ui/crafting/CraftingMenu.gd" type="Script" id=3]
[ext_resource path="res://src/ui/crafting/SelectedItemContainer.gd" type="Script" id=4]

[node name="CraftingMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="PanelContainer" parent="."]
margin_right = 384.0
margin_bottom = 384.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 377.0
margin_bottom = 377.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="PanelContainer/HBoxContainer"]
margin_right = 122.0
margin_bottom = 370.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemList" type="ItemList" parent="PanelContainer/HBoxContainer/ScrollContainer"]
margin_right = 122.0
margin_bottom = 370.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 2 )

[node name="PanelContainer" type="PanelContainer" parent="PanelContainer/HBoxContainer"]
margin_left = 126.0
margin_right = 370.0
margin_bottom = 370.0
size_flags_horizontal = 3

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/HBoxContainer/PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 237.0
margin_bottom = 363.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 16
custom_constants/margin_top = 16
custom_constants/margin_left = 16
custom_constants/margin_bottom = 16

[node name="SelectedItemContainer" type="VBoxContainer" parent="PanelContainer/HBoxContainer/PanelContainer/MarginContainer"]
margin_left = 16.0
margin_top = 16.0
margin_right = 214.0
margin_bottom = 340.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 4 )

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/HBoxContainer/PanelContainer/MarginContainer/SelectedItemContainer"]
margin_right = 198.0
margin_bottom = 30.0
custom_constants/margin_bottom = 16

[node name="ItemNameLabel" type="Label" parent="PanelContainer/HBoxContainer/PanelContainer/MarginContainer/SelectedItemContainer/MarginContainer"]
margin_right = 198.0
margin_bottom = 14.0
size_flags_horizontal = 3
text = "Item name"
align = 1

[node name="ItemIcon" type="TextureRect" parent="PanelContainer/HBoxContainer/PanelContainer/MarginContainer/SelectedItemContainer"]
margin_top = 34.0
margin_right = 198.0
margin_bottom = 82.0
rect_min_size = Vector2( 0, 48 )
texture = ExtResource( 1 )
stretch_mode = 6

[node name="IngredientsList" type="GridContainer" parent="PanelContainer/HBoxContainer/PanelContainer/MarginContainer/SelectedItemContainer"]
margin_top = 86.0
margin_right = 198.0
margin_bottom = 86.0
columns = 4

[node name="Label" type="Label" parent="PanelContainer/HBoxContainer/PanelContainer/MarginContainer/SelectedItemContainer"]
margin_top = 90.0
margin_right = 198.0
margin_bottom = 121.0
text = "Pretty long descriptions maybe very very long like this"
autowrap = true

[node name="CraftButton" type="Button" parent="PanelContainer/HBoxContainer/PanelContainer/MarginContainer/SelectedItemContainer"]
margin_top = 125.0
margin_right = 198.0
margin_bottom = 145.0
text = "craft"

[connection signal="item_selected" from="PanelContainer/HBoxContainer/ScrollContainer/ItemList" to="PanelContainer/HBoxContainer/ScrollContainer/ItemList" method="_on_ItemList_item_selected"]
[connection signal="on_item_selected" from="PanelContainer/HBoxContainer/ScrollContainer/ItemList" to="PanelContainer/HBoxContainer/PanelContainer/MarginContainer/SelectedItemContainer" method="_on_ItemList_on_item_selected"]
